--- a/praktikum3.2R.html
+++ b/praktikum3.2R.html
@@ -14,7 +14,7 @@
         <h2 align="center" style="padding-top: 20px;">THANK YOU</h2>
       <br />
     <hr color= "#1ac6ff" style="margin-top: -20px;">
-    <p style="font-family: 'Ubuntu', sans-serif; margin-left: 20px; font-size: 20px;">
+    <p style="font-family: 'Ubuntu', sans-serif; margin-left: 20px; font-size: 15px;">
         Thank you for endering from Black Ghoose Bistro. we have received the following
         <br>
         Information about your order.
@@ -22,7 +22,7 @@
     <br>
     <br>
     <b style="color: #ff6633; font-size: medium; margin-left: 20px; font-family: 'Poppins', sans-serif;">Your Information</b>
-    <table style="width: 60%; font-family: Arial, Helvetica, sans-serif; font-size: small;">
+    <table style="width: 60%;">
         <tbody>
             <tr>
                 <td style="padding-left: 50px">
